added page for cv

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Homepage of James McInerney
 ---
 <div class="about">
-	<h1> About </h1>
+	<h1> about </h1>
 		<p> 
 		I began studying physics as an undergraduate student at the University of Massachusetts where I completed my B.S. degree with a thesis on ''Critical phenomenoa of Kerr-de Sitter black holes'' with the guidance of the Professor Jennie Traschen.
 		Afterwards, I began my PhD at the Georgia Institute of Technology with an initial interest in numerical relativity and LIGO data analysis.
