adjusted cv display and added link to download

--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,6 @@
 ---
-layout: default
-title: James McInerney: CV
+layout: default 
+title: James McInerney -- CV
 ---
-![James McInerney's CV](/assets/cv.pdf)
+<a href="assets/img/cv.pdf" download> download a copy here </a>
+<object data="assets/img/cv.pdf" alt="James McInerney's CV" type="application/pdf" style="min-height:100vh;width:100%"></object>
