--- a/research.html
+++ b/research.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: James McInerney: Research
+title: James McInerney -- Research
 ---
 <div class="research">
 	<h1> origami </h1>
