--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Homepage of James McInerney
 ---
 <div class="about">
 	<h1> about </h1>
-		<img src="assets/img/portrait.jpeg" alt="James McInerney's portrait" style="width:400;height:350px;"></img>
+		<img src="assets/img/portrait.jpeg" alt="James McInerney's portrait" style="width:400;height:350px;" align="left" />
 		<p> 
 		I began studying physics as an undergraduate student at the University of Massachusetts where I completed my B.S. degree with a thesis on ''Critical phenomenoa of Kerr-de Sitter black holes'' with the guidance of the Professor Jennie Traschen.
 		Afterwards, I began my PhD at the Georgia Institute of Technology with an initial interest in numerical relativity and LIGO data analysis.
