--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@ title: Homepage of James McInerney
 ---
 <div class="about">
 	<h1> about </h1>
-		<img src="assets/img/portrait.jpeg" alt="James McInerney's portrait" style="width:400;height:350px;" align="left" style=”margin: 0px 50px 0px 0px;” />
+		<img src="assets/img/portrait.jpeg" alt="James McInerney's portrait" style="width:400;height:350px;margin:0px 50px 0px 0px;" align="left" />
 		<p> 
-		I began studying physics as an undergraduate student at the University of Massachusetts where I completed my B.S. degree with a thesis on ''Critical phenomenoa of Kerr-de Sitter black holes'' with the guidance of the Professor Jennie Traschen.
+		I began studying physics as an undergraduate student at the University of Massachusetts where I completed my B.S. degree with a thesis on ''Critical phenomenoa of Kerr-de Sitter black holes'' under the guidance of the Professor Jennie Traschen.
 		Afterwards, I began my PhD at the Georgia Institute of Technology with an initial interest in numerical relativity and LIGO data analysis.
-		I have since moved into soft matter theory with particular interest in using geometry and topology to control unconventional phases of matter.
-		My thesis work is devoted to studying periodic origami sheets.
-		I also am continuing work on liquid crystals with curved boundaries and have a growing fascination in the morphology of biological systems.
+		I have since moved into soft matter theory where my thesis work with Professor Zeb Rocklin is devoted to studying the mechanical properties of periodic origami sheets.
+		
 		</p>
 </div><!-- /.about -->
