--- a/research.html
+++ b/research.html
@@ -8,5 +8,14 @@ title: James McInerney -- Research
 		The traditional art of folding paper makes a great model for the deformation of thin sheets with patterns of creases particularly susceptible to bending.
 		These models extend from creased paper to articulated metallic plates and even microscopic surfaces such as graphene and polymer layers.
 		My interest is in determining how we can pattern these sheets to engineer a particular mechanical response.
+		See our recent <a href="https://arxiv.org/abs/2003.01095">preprint</a> exploring the general properties of origami triangulations including a two-dimensional surface of triangulated configurations that bifurcates from the spatially periodic state and a lack of topological polarization; both properties following from a hidden symmetry between the systems' constraints and degrees of freedom.
+		I am currently continuing this work through two further studies: (1) how discrete symmetries play a role in the linear mechanical response and (2) how curvature can close the band gap to induce boundary modes.
+		</p>
+	<h1> liquid crystals </h1>
+		<p> 
+		Liquid crystalline phases of matter form for sufficiently anisotropic particles and exhibit properties resembling both fluids and solids.
+		Their ability to control light via birefringence is exploited in LCD screens where the extraordinary waves can be manipulated by rearranging the constituent particles with an external electric field to generate a non-zero twist.
+		Many liquid crystalline systems exhibit an inherent chirality that gives rise to twisting without the presence of any external fields.
+		In recent <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.121.247803">experimental</a> and <a href="https://pubs.rsc.org/en/content/articlelanding/2019/sm/c8sm02055h/unauth#!divAbstract">theoretical</a> work we show the confining geometry, particularly geometries with non-zero Gaussian curvature, leads to twisting without any chirality on the microscopic scale.
 		</p>
 </div><!-- /.research -->
